# gce-meta-server

./: Cargo.toml  metadata_example.yaml
src/: attributes.rs  main.rs
