[package]
name = "gce-meta-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
rouille = "3.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json = "1.0.68"
serde-transcode = "1.1.1"